# Messenger

./: .gitignore  INSTALL.md  README.md
client/: Makefile  client
client/src/: client_threads.c  client_threads.h  main.c
client_qt/: CMakeLists.txt  CMakePresets.json
client_qt/src/: LoginDialog.cpp  LoginDialog.h  MainWindow.cpp  MainWindow.h  NetClient.cpp  NetClient.h  main.cpp
common/: crypto.c  crypto.h  kv.c  kv.h  net_frame.c  net_frame.h  platform.c  platform.h  urlcodec.c  urlcodec.h
docs/: CRYPTO.md  USER_GUIDE.md  protocol.md
server/: Makefile  server
server/data/: rooms.txt
server/src/: logger.c  logger.h  main.c
